--- a/research.bib
+++ b/research.bib
@@ -647,4 +647,20 @@
   journal={arXiv preprint arXiv:1409.4842},
   year={2014}
 }
+
+
+@incollection{zeiler2014visualizing,
+  title={Visualizing and understanding convolutional networks},
+  author={Zeiler, Matthew D and Fergus, Rob},
+  booktitle={Computer Vision--ECCV 2014},
+  pages={818--833},
+  year={2014},
+  publisher={Springer}
+}
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
 }
