--- a/research.bib
+++ b/research.bib
@@ -663,4 +663,86 @@
   journal={arXiv preprint arXiv:1409.1556},
   year={2014}
 }
+
+@InProceedings{Chatfield14,
+  author       = "Chatfield, K. and Simonyan, K. and Vedaldi, A. and Zisserman, A.",
+  title        = "Return of the Devil in the Details: Delving Deep into Convolutional Nets",
+  booktitle    = "British Machine Vision Conference",
+  year         = "2014",
+}
+
+@article{wei2014cnn,
+  title={CNN: Single-label to multi-label},
+  author={Wei, Yunchao and Xia, Wei and Huang, Junshi and Ni, Bingbing and Dong, Jian and Zhao, Yao and Yan, Shuicheng},
+  journal={arXiv preprint arXiv:1406.5726},
+  year={2014}
+}
+
+@incollection{agrawal2014analyzing,
+  title={Analyzing the performance of multilayer neural networks for object recognition},
+  author={Agrawal, Pulkit and Girshick, Ross and Malik, Jitendra},
+  booktitle={Computer Vision--ECCV 2014},
+  pages={329--344},
+  year={2014},
+  publisher={Springer}
+}
+@InProceedings{kawano14c,
+ author="Kawano, Y. and Yanai, K.",
+ title="Automatic Expansion of a Food Image Dataset Leveraging Existing Categories with Domain Adaptation",
+ booktitle="Proc. of ECCV Workshop on Transferring and Adapting Source
+Knowledge in Computer Vision (TASK-CV)",
+ year="2014",
+}
+@inproceedings{bossard14,
+  title = {Food-101 -- Mining Discriminative Components with Random Forests},
+  author = {Bossard, Lukas and Guillaumin, Matthieu and Van Gool, Luc},
+  booktitle = {European Conference on Computer Vision},
+  year = {2014}
+}
+
+@article{srivastava2014dropout,
+  title={Dropout: A simple way to prevent neural networks from overfitting},
+  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={The Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014},
+  publisher={JMLR. org}
+}
+
+@article{lin2013network,
+  title={Network in network},
+  author={Lin, Min and Chen, Qiang and Yan, Shuicheng},
+  journal={arXiv preprint arXiv:1312.4400},
+  year={2013}
+}
+
+@inproceedings{jia2014caffe,
+  title={Caffe: Convolutional architecture for fast feature embedding},
+  author={Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+  booktitle={Proceedings of the ACM International Conference on Multimedia},
+  pages={675--678},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{glorot2010understanding,
+  title={Understanding the difficulty of training deep feedforward neural networks},
+  author={Glorot, Xavier and Bengio, Yoshua},
+  booktitle={International conference on artificial intelligence and statistics},
+  pages={249--256},
+  year={2010}
+}
+}
+
+@incollection{NIPS2014_Zhou,
+title = {Learning Deep Features for Scene Recognition using Places Database},
+author = {Zhou, Bolei and Lapedriza, Agata and Xiao, Jianxiong and Torralba, Antonio and Oliva, Aude},
+booktitle = {Advances in Neural Information Processing Systems 27},
+editor = {Z. Ghahramani and M. Welling and C. Cortes and N.D. Lawrence and K.Q. Weinberger},
+pages = {487--495},
+year = {2014},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/5349-learning-deep-features-for-scene-recognition-using-places-database.pdf}
 }
