--- a/research.bib
+++ b/research.bib
@@ -746,3 +746,12 @@ year = {2014},
 publisher = {Curran Associates, Inc.},
 url = {http://papers.nips.cc/paper/5349-learning-deep-features-for-scene-recognition-using-places-database.pdf}
 }
+
+@incollection{singh2012unsupervised,
+  title={Unsupervised discovery of mid-level discriminative patches},
+  author={Singh, Saurabh and Gupta, Abhinav and Efros, Alexei A},
+  booktitle={Computer Vision--ECCV 2012},
+  pages={73--86},
+  year={2012},
+  publisher={Springer}
+}
