--- a/total.tex
+++ b/total.tex
@@ -20,7 +20,7 @@
 %% Legal Notice:
 %% This code is offered as-is without any warranty either expressed or
 %% implied; without even the implied warranty of MERCHANTABILITY or
-%% FITNESS FOR A PARTICULAR PURPOSE!
+%% FITNESS FOR A PARTICULAR PURPOSE!p
 %% User assumes all risk.
 %% In no event shall IEEE or any contributor to this code be liable for
 %% any damages or losses, including, but not limited to, incidental,
@@ -533,7 +533,7 @@ The abstract goes here.
 
 
 \section{Conclusion}
-The conclusion goes here.
+\input{conclusion.tex}
 
 
 
